fix vercel runtime + openai

--- a/package.json
+++ b/package.json
@@ -2,16 +2,13 @@
   "name": "api-momam",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^5.2.1",
     "openai": "^6.10.0"
   }
 }
